--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,10 +1,10 @@
 .site-header {
-  z-index: 0;
+  z-index: 999;
   display: flex;
   align-items: center;
   flex-direction: column;
-  position: sticky;
-  top: 9;
+  position: fixed;
+  top: 0;
 
   /* ENTJ: authority + control */
   background-color: #0B1F3B; /* deep navy */
@@ -41,7 +41,7 @@
   }
 
   .nav-links {
-    display: none;
+    display: block;
     width: 100%;
 
     /* mobile menu background stays navy (not light blue) */
